// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataGridDrafts DataGridDrafts renders correctly with no rows 1`] = `
<div>
  <div
    className="react-data-table-component"
    columns={
      Array [
        Object {
          "name": "Draft ID",
          "selector": "draftId",
          "sortable": true,
        },
        Object {
          "name": "Title",
          "selector": "title",
          "sortable": true,
        },
        Object {
          "name": "Created At",
          "selector": "createdAt",
          "sortable": true,
        },
        Object {
          "name": "Updated At",
          "selector": "updatedAt",
          "sortable": true,
        },
        Object {
          "name": "Latest Version",
          "selector": "latestVersion",
          "sortable": true,
        },
        Object {
          "name": "Revision Count",
          "selector": "revisionCount",
          "sortable": true,
        },
      ]
    }
    data={Array []}
    dense={true}
    keyField="draftId"
    onSelectedRowsChange={[Function]}
    pagination={true}
    selectableRows={true}
    striped={true}
  >
    react-data-table-component
  </div>
</div>
`;

exports[`DataGridDrafts DataGridDrafts renders correctly with rows 1`] = `
<div>
  <div
    className="react-data-table-component"
    columns={
      Array [
        Object {
          "name": "Draft ID",
          "selector": "draftId",
          "sortable": true,
        },
        Object {
          "name": "Title",
          "selector": "title",
          "sortable": true,
        },
        Object {
          "name": "Created At",
          "selector": "createdAt",
          "sortable": true,
        },
        Object {
          "name": "Updated At",
          "selector": "updatedAt",
          "sortable": true,
        },
        Object {
          "name": "Latest Version",
          "selector": "latestVersion",
          "sortable": true,
        },
        Object {
          "name": "Revision Count",
          "selector": "revisionCount",
          "sortable": true,
        },
      ]
    }
    data={
      Array [
        Object {
          "createdAt": "mock-created-at",
          "draftId": "mock-draft-id",
          "latestVersion": "mock-latest-version",
          "revisionCount": "revision-count",
          "title": "mock-title",
          "updatedAt": "mock-updated-at",
        },
      ]
    }
    dense={true}
    keyField="draftId"
    onSelectedRowsChange={[Function]}
    pagination={true}
    selectableRows={true}
    striped={true}
  >
    react-data-table-component
  </div>
</div>
`;
